<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chronometer</string>
    <string name="hello_world">Hello world!</string>
    <string name="startButtonLabel">Start</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="resumeButtonLabel">Resume</string>
    <string name="tvSeparatorLabel">:</string>
    <string name="tvMillsLabel">000</string>
    <string name="tvSecsMinsHoursLabel">00</string>
    <string name="tvDaysLabel">00000</string>
    <string name="tvRunLabel">Run: </string>
    <string name="tvStopLabel">Stop: </string>
    <string name="tvTimeLabel">Time: </string>

</resources>
