<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

       <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDaysLabel"
            android:textColor="#66FF66"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvSepDaysHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSeparatorLabel"
            android:textColor="#ffffff"
            android:textSize="33sp" />
        
        <TextView
            android:id="@+id/tvHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSecsMinsHoursLabel"
            android:textColor="#66FF66"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvSepHoursMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSeparatorLabel"
            android:textColor="#ffffff"
            android:textSize="35sp" />
        
        <TextView
            android:id="@+id/tvMins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSecsMinsHoursLabel"
            android:textColor="#66FF66"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvSepMinSecs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSeparatorLabel"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvSecs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSecsMinsHoursLabel"
            android:textColor="#66FF66"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvSepSecsMills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSeparatorLabel"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvMills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMillsLabel"
            android:textColor="#66FF66"
            android:textSize="35sp" />
    </LinearLayout>

     <Button
         android:id="@+id/startButton"
         android:layout_width="160dp"
         android:layout_height="45dp"
         android:layout_alignBaseline="@+id/pauseButton"
         android:layout_alignBottom="@+id/pauseButton"
         android:layout_alignParentLeft="true"
         android:text="@string/startButtonLabel" />

     <Button
         android:id="@+id/stopButton"
         android:layout_width="160dp"
         android:layout_height="45dp"
         android:layout_alignBaseline="@+id/resumeButton"
         android:layout_alignBottom="@+id/resumeButton"
         android:layout_alignParentLeft="true"
         android:text="@string/stopButtonLabel" />

     <Button
         android:id="@+id/resumeButton"
         android:layout_width="160dp"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/linearLayout1"
         android:gravity="center"
         android:text="@string/resumeButtonLabel" />

     <Button
         android:id="@+id/pauseButton"
         android:layout_width="160dp"
         android:layout_height="45dp"
         android:layout_alignBaseline="@+id/resumeButton"
         android:layout_alignBottom="@+id/resumeButton"
         android:layout_alignParentRight="true"
         android:gravity="center"
         android:text="@string/pauseButtonLabel" />
     
     <ListView
         android:id="@+id/contentlist"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/startButton" />

</RelativeLayout>
